feat(api): add limited benefit claims
